prevent user selection for blurred css

--- a/src/style.css
+++ b/src/style.css
@@ -6,4 +6,7 @@
 
 .blurred {
     filter: blur(4px);
+    user-select: none;
+    -ms-user-select: none;
+    -webkit-user-select: none;
 }
